# robotic-fleet-intelligence-platform

./: .gitignore  .pre-commit-config.yaml  README.md  api_call.py  loggers.py  main.py  pyproject.toml  test.py
.streamlit/: config.toml
Archive/: test.py
Assets/: description_data.ipynb  exploratory_analysis.ipynb
Backend/: api_call.py  flightera_api.py
Frontend/: streamlit.py  streamlit_app.py  test.py
Source/: description_data.csv  description_data.xlsx  openskydata_raw.csv
Src/robotic-fleet-intelligence-platform/: main.py
logs/: config.json
navigation/: navig.py
sensors/: sensor.py
