[tool.poetry]
name = "robotic-fleet-intelligence-platform"
version = "0.1.0"
description = "Projet Trafic Aérien"
authors = ["IshemZ <ishem.zerzour@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
numpy = "^2.2.5"
scikit-learn = "^1.6.1"
streamlit = "^1.45.0"
requests = "^2.32.3"
pylance = "^0.26.1"
python-dotenv = "^1.1.0"
setuptools = "^80.4.0"
pymongo = "^4.12.1"
watchdog = "^6.0.0"
plotly = "^6.0.1"
pydeck = "^0.9.1"
ruff = "^0.11.10"
uv = "^0.7.6"
folium = "^0.19.6"
streamlit-folium = "^0.25.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
